@@ -1,41 +1,42 @@
 /*
 	sgi: audio output on SGI boxen
 
-	copyright ?-2006 by the mpg123 project - free software under the terms of the LGPL 2.1
+	copyright ?-2013 by the mpg123 project - free software under the terms of the LGPL 2.1
 	see COPYING and AUTHORS files in distribution or http://mpg123.org
 	initially written (as it seems) by Thomas Woerner
 */
 
 #include <fcntl.h>
 
-/* #include <audio.h> */
 #include <dmedia/audio.h>
 
 #include "mpg123app.h"
+#include "errno.h"
 #include "debug.h"
 
-
-/* Analog output constant */
-static const char analog_output_res_name[] = ".AnalogOut";
-
+/* struct audiolib_info alinfo; */
+int current_dev;
+char *current_device;
 
 static int set_rate(audio_output_t *ao, ALconfig config)
 {
 	int dev = alGetDevice(config);
 	ALpv params[1];
-	
+
 	/* Make sure the device is OK */
 	if (dev < 0)
 	{
-		error1("set_rate: %s",alGetErrorString(oserror()));
+		error1("set_rate: %s", alGetErrorString(oserror()));
 		return 1;      
 	}
 	
-	params[0].param = AL_OUTPUT_RATE;
-	params[0].value.ll = alDoubleToFixed(ao->rate);
-	
-	if (alSetParams(dev, params,1) < 0)
-		error1("set_rate: %s",alGetErrorString(oserror()));
+	if (ao->rate > 0) {
+		params[0].param = AL_OUTPUT_RATE;
+		params[0].value.ll = alDoubleToFixed(ao->rate);
+		
+		if (alSetParams(dev, params,1) < 0)
+			error1("set_rate: %s", alGetErrorString(oserror()));
+	}
 	
 	return 0;
 }
@@ -45,13 +46,14 @@ static int set_channels(audio_output_t *ao, ALconfig config)
 {
 	int ret;
 	
-	if(ao->channels == 2)
+	if(ao->channels == 2) {
 		ret = alSetChannels(config, AL_STEREO);
-	else
+	} else {
 		ret = alSetChannels(config, AL_MONO);
+	}
 	
 	if (ret < 0)
-		error1("set_channels : %s",alGetErrorString(oserror()));
+		error1("set_channels : %s", alGetErrorString(oserror()));
 	
 	return 0;
 }
@@ -59,10 +61,10 @@ static int set_channels(audio_output_t *ao, ALconfig config)
 static int set_format(audio_output_t *ao, ALconfig config)
 {
 	if (alSetSampFmt(config,AL_SAMPFMT_TWOSCOMP) < 0)
-		error1("set_format : %s",alGetErrorString(oserror()));
+		error1("set_format : %s", alGetErrorString(oserror()));
 	
 	if (alSetWidth(config,AL_SAMPLE_16) < 0)
-		error1("set_format : %s",alGetErrorString(oserror()));
+		error1("set_format : %s", alGetErrorString(oserror()));
 	
 	return 0;
 }
@@ -70,71 +72,94 @@ static int set_format(audio_output_t *ao, ALconfig config)
 
 static int open_sgi(audio_output_t *ao)
 {
-	int dev = AL_DEFAULT_OUTPUT;
-	ALconfig config = alNewConfig();
 	ALport port = NULL;
-	
+	ALconfig config = alNewConfig();
+
+	ao->userptr = NULL;
+
 	/* Test for correct completion */
 	if (config == 0) {
-		error1("open_sgi: %s",alGetErrorString(oserror()));
+		error1("open_sgi: %s", alGetErrorString(oserror()));
 		return -1;
 	}
-	
-	/* Set port parameters */
-	if(ao->channels == 2)
-		alSetChannels(config, AL_STEREO);
-	else
-		alSetChannels(config, AL_MONO);
-	
-	alSetWidth(config, AL_SAMPLE_16);
-	alSetSampFmt(config,AL_SAMPFMT_TWOSCOMP);
-	alSetQueueSize(config, 131069);
-	
-	/* Setup output device to specified module. If there is no module
-	specified in ao structure, use the default four output */
+
+	/* Setup output device to specified device name. If there is no device name
+	specified in ao structure, use the default for output */
 	if ((ao->device) != NULL) {
-		char *dev_name;
-		
-		dev_name=malloc((strlen(ao->device) + strlen(analog_output_res_name) + 1) *
-		  sizeof(char));
-		
-		strcpy(dev_name,ao->device);
-		strcat(dev_name,analog_output_res_name);
-		
-		/* Find the asked device resource */
-		dev=alGetResourceByName(AL_SYSTEM,dev_name,AL_DEVICE_TYPE);
-		
-		/* Free allocated space */
-		free(dev_name);
-		
-		if (!dev) {
-			error2("Invalid audio resource: %s (%s)",dev_name, alGetErrorString(oserror()));
+		current_dev = alGetResourceByName(AL_SYSTEM, ao->device, AL_OUTPUT_DEVICE_TYPE);
+
+		debug2("Dev: %s %i", ao->device, current_dev);
+
+		if (!current_dev) {
+			int i, numOut;
+			char devname[32];
+			ALpv pv[1];
+			ALvalue *alvalues;
+
+			error2("Invalid audio resource: %s (%s)", ao->device, alGetErrorString(oserror()));
+
+			if ((numOut= alQueryValues(AL_SYSTEM,AL_DEFAULT_OUTPUT,0,0,0,0))>=0) {
+				fprintf(stderr, "There are %d output devices on this system.\n", numOut);
+			}
+			else {
+				fprintf(stderr, "Can't find output devices. alQueryValues failed: %s\n", alGetErrorString(oserror()));
+				return -1;
+			}
+
+			alvalues = malloc(sizeof(ALvalue) * numOut);
+			i = alQueryValues(AL_SYSTEM, AL_DEFAULT_OUTPUT, alvalues, numOut, pv, 0);
+			if (i == -1) {
+				error1("alQueryValues: %s", alGetErrorString(oserror()));
+			} else {
+				for (i=0; i < numOut; i++){ 
+					pv[0].param = AL_NAME;
+					pv[0].value.ptr = devname;
+					pv[0].sizeIn = 32;
+					alGetParams(alvalues[i].i, pv, 1);
+
+					fprintf(stderr, "%i: %s\n", i, devname);
+				}
+			}
+			free(alvalues);
+
 			return -1;
 		}
+
+		if (alSetDevice(config, current_dev) < 0) {
+			error1("open: alSetDevice : %s",alGetErrorString(oserror()));
+			return -1;
+		}
+	} else {
+		current_dev = AL_DEFAULT_OUTPUT;
 	}
-	
+
 	/* Set the device */
-	if (alSetDevice(config,dev) < 0)
+	if (alSetDevice(config, current_dev) < 0)
 	{
-		error1("open_sgi: %s",alGetErrorString(oserror()));
+		error1("open_sgi: %s", alGetErrorString(oserror()));
 		return -1;
 	}
+
+	/* Set port parameters */
+
+	if (alSetQueueSize(config, 131069) < 0) {
+		error1("open_sgi: setting audio buffer failed: %s", alGetErrorString(oserror()));
+		return -1;
+	}
+	
+	set_format(ao, config);
+	set_rate(ao, config);
+	set_channels(ao, config);
 	
 	/* Open the audio port */
 	port = alOpenPort("mpg123-VSC", "w", config);
-	if(port == NULL) {
+	if (port == NULL) {
 		error1("Unable to open audio channel: %s", alGetErrorString(oserror()));
 		return -1;
 	}
 	
 	ao->userptr = (void*)port;
-	
-	
-	set_format(ao, config);
-	set_channels(ao, config);
-	set_rate(ao, config);
-	
-	
+
 	alFreeConfig(config);
 	
 	return 1;
@@ -147,14 +172,18 @@ static int get_formats_sgi(audio_output_t *ao)
 }
 
 
-static int write_sgi(audio_output_t *ao,unsigned char *buf,int len)
+static int write_sgi(audio_output_t *ao, unsigned char *buf, int len)
 {
+	if (ao->userptr == NULL) {error1("foo %i",1);return -1;}
+
 	ALport port = (ALport)ao->userptr;
-	
-	if(ao->format == MPG123_ENC_SIGNED_8)
-		alWriteFrames(port, buf, len>>1);
-	else
+	ALconfig alconfig = alGetConfig(port);
+
+	if(ao->channels == 2) {
 		alWriteFrames(port, buf, len>>2);
+	} else {
+		alWriteFrames(port, buf, len>>1);
+	}
 	
 	return len;
 }
@@ -165,6 +194,7 @@ static int close_sgi(audio_output_t *ao)
 	ALport port = (ALport)ao->userptr;
 	
 	if (port) {
+		// play all remaining samples
 		while(alGetFilled(port) > 0) sginap(1);  
 		alClosePort(port);
 		ao->userptr=NULL;
@@ -175,12 +205,16 @@ static int close_sgi(audio_output_t *ao)
 
 static void flush_sgi(audio_output_t *ao)
 {
-}
+	ALport port = (ALport)ao->userptr;
 
+	if (port) {
+		alDiscardFrames(port, alGetFilled(port));
+	}
+}
 
 static int init_sgi(audio_output_t* ao)
 {
-	if (ao==NULL) return -1;
+	if (ao == NULL) return -1;
 
 	/* Set callbacks */
 	ao->open = open_sgi;
@@ -192,10 +226,6 @@ static int init_sgi(audio_output_t* ao)
 	/* Success */
 	return 0;
 }
-
-
-
-
 
 /* 
 	Module information data structure
@@ -209,5 +239,3 @@ mpg123_module_t mpg123_output_module_info = {
 	
 	/* init_output */	init_sgi,						
 };
-
-
